[package]
name = "mailcatcher-lib"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[bin]]
name = "mailcatcher"
path = "src/main.rs"

[features]
faking = ["fake"]

[dependencies.async-std]
version = "1.8.0"
default-features = true
features = ["unstable"]

[dependencies.base64]
version = "0.13.0"
default-features = false

[dependencies.broadcaster]
version = "1.0.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false

[dependencies.encoding]
version = "0.2.33"
default-features = false

[dependencies.env_logger]
version = "0.8.2"

[dependencies.fake]
version = "2.4.0"
features = ["chrono"]
optional = true

[dependencies.fnv]
version = "1.0.7"

[dependencies.futures]
version = "0.3.8"
default-features = false
features = ["alloc", "std"]

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.log]
version = "0.4.11"
default-features = false

[dependencies.miniz_oxide]
version = "0.4.3"
default-features = false

[dependencies.quote]
version = "1"
default-features = false

[dependencies.regex]
version = "1.4.2"
default-features = false
# feature std needed by regex
features = ["std"]

[dependencies.serde_json]
version = "1.0.61"
default-features = false
features = ["alloc"]

[dependencies.sled]
version = "0.34"
optional = true
default-features = false

[dependencies.syn]
version = "1"
default-features = false

[dependencies.tide]
version = "0.15.0"
default-features = false
features = ["h1-server"]

[dependencies.ulid]
version = "0.4.1"
default-features = false

[profile.release]
lto = "thin"
debug-assertions = false