[package]
name = "mailcatcher"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
license = "Apache-2.0"
description = "Catchall mail SMTP server used on development computer"
keywords = ["smtp", "fake", "catchall"]
repository = "https://github.com/lolo32/mailcatcher"
categories = ["development-tools"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "mailcatcher-derive"
]

[features]
faking = []

[dependencies.async-std]
version = "1.9.0"
default-features = true
features = ["unstable"]

[dependencies.base64]
version = "0.13.0"
default-features = false

[dependencies.broadcaster]
version = "1.0.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false

[dependencies.encoding]
version = "0.2.33"
default-features = false

[dependencies.env_logger]
version = "0.8.2"

[dependencies.fake]
version = "2.4.0"
features = ["chrono"]

[dependencies.fnv]
version = "1.0.7"

[dependencies.futures]
version = "0.3.12"
default-features = false
features = ["alloc", "std"]

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.log]
version = "0.4.14"
default-features = false

[dependencies.mailcatcher-derive]
path = "mailcatcher-derive"

[dependencies.miniz_oxide]
version = "0.4.3"
default-features = false

[dependencies.opener]
version = "0.4.1"

[dependencies.regex]
version = "1.4.3"
default-features = false
# feature std needed by regex
features = ["std"]

[dependencies.serde]
version = "1.0.123"

[dependencies.serde_json]
version = "1.0.61"
default-features = false
features = ["alloc"]

[dependencies.structopt]
version = "0.3.21"
default-features = false

[dependencies.textwrap]
version = "=0.11"

[dependencies.tide]
version = "0.16.0"
default-features = false
features = ["h1-server"]

[dependencies.ulid]
version = "0.4.1"
default-features = false

[profile.release]
lto = "thin"
debug-assertions = false
