[package]
name = "mailcatcher"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
license = "Apache-2.0"
description = "Catchall mail SMTP server used on development computer"
keywords = ["smtp", "fake", "catchall"]
repository = "https://github.com/lolo32/mailcatcher"
categories = ["development-tools"]
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "mailcatcher-derive"
]

[features]
faking = []

[dependencies.async-log]
version = "1"

[dependencies.async-std]
version = "1.9.0"
default-features = true
features = ["unstable"]

[dependencies.base64]
version = "0.13.0"
default-features = false

[dependencies.broadcaster]
version = "1.0.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false

[dependencies.encoding]
version = "0.2.33"
default-features = false

[dependencies.env_logger]
version = "0.8.2"

[dependencies.fake]
version = "2.4.0"
features = ["chrono"]

[dependencies.femme]
version = "1.3.0"

[dependencies.fnv]
version = "1.0.7"

[dependencies.futures]
version = "0.3.12"
default-features = false
features = ["alloc", "std"]

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.log]
version = "0.4.14"
default-features = false

[dependencies.mailcatcher-derive]
path = "mailcatcher-derive"

[dependencies.miniz_oxide]
version = "0.4.3"
default-features = false

[dependencies.opener]
version = "0.4.1"

[dependencies.regex]
version = "1.4.3"
default-features = false
# feature std needed by regex
features = ["std"]

[dependencies.serde]
version = "1.0.123"

[dependencies.serde_json]
version = "1.0.61"
default-features = false
features = ["alloc"]

[dependencies.structopt]
version = "0.3.21"
default-features = false

[dependencies.textwrap]
version = "=0.11"

[dependencies.tide]
version = "0.16.0"
default-features = false
features = ["h1-server"]

[dependencies.tray-item]
version = "0.4.0-alpha"

[dependencies.ulid]
version = "0.4.1"
default-features = false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winuser","wincon","shellapi"] }

[profile.release]
lto = "thin"
debug-assertions = false

[package.metadata.winres]
#Comments           Additional information that should be displayed for diagnostic purposes.
#CompanyName        Company that produced the file?for example, "Microsoft Corporation" or
#                   "Standard Microsystems Corporation, Inc."
#                       Generated from Cargo.toml
#FileDescription    File description to be presented to users. This string may be displayed in a list box
#                   when the user is choosing files to install?for example, "Keyboard Driver for AT-Style
#                   Keyboards".
#                       Generated from Cargo.toml
#FileVersion        Version number of the file?for example, "3.10" or "5.00.RC2".
#                       Generated from Cargo.toml
#InternalName       Internal name of the file, if one exists?for example, a module name if the file is a
#                   dynamic-link library. If the file has no internal name, this string should be the original
#                   filename, without extension.
#                       Generated from Cargo.toml
#LegalCopyright     Copyright notices that apply to the file. This should include the full text of all notices,
#                   legal symbols, copyright dates, and so on.
#                   This string is optional.
LegalCopyright = "Copyright © 2021"

#LegalTrademarks    Trademarks and registered trademarks that apply to the file. This should include the full
#                   text of all notices, legal symbols, trademark numbers, and so on.
#                   This string is optional.
#OriginalFilename   Original name of the file, not including a path. This information enables an application
#                   to determine whether a file has been renamed by a user. The format of the name depends on
#                   the file system for which the file was created.
#                       Generated from Cargo.toml
#PrivateBuild       Information about a private version of the file?for example, "Built by TESTER1 on \TESTBED".
#                   This string should be present only if VS_FF_PRIVATEBUILD is specified in the fileflags
#                   parameter of the root block.
#ProductName        Name of the product with which the file is distributed.
#                       Generated from Cargo.toml
#ProductVersion     Version of the product with which the file is distributed?for example, "3.10" or "5.00.RC2".
#                       Generated from Cargo.toml
#SpecialBuild       Text that indicates how this version of the file differs from the standard version
#                   for example, "Private build for TESTER1 solving mouse problems on M250 and M250E computers".
#                   This string should be present only if VS_FF_SPECIALBUILD is specified in the fileflags
#                   parameter of the root block.
