[package]
name = "mailcatcher-derive"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
license = "Apache-2.0"
license-file = "../LICENSE.txt"
description = "Embed file inside binary build, used by mailcatcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies.chrono]
version = "0.4.19"
default-features = false

[dependencies.miniz_oxide]
version = "0.4.3"
default-features = false

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"
default-features = false

[dependencies.syn]
version = "1"
default-features = false
